# hakdoc

./: .env.example  .gitignore  AI_IMPLEMENTATION_PLAN.md  DocWebApp.command  LICENSE  README.md  package-lock.json  package.json  server.js
.github/workflows/: release.yml
ai/: prompts.js  provider.js  routes.js
doc/screenshots/: demo-document.md
public/: app.js  index.html  style.css
public/js/: ai.js  app.js  editor.js  modals.js  settings.js  state.js  tree.js  utils.js
scripts/: bundle-server.js  release.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
